--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -7,7 +7,7 @@
             <div class="row">
               <div class="col-7">
                 <div class="text-primary p-4">
-                  <h5 class="text-primary">Welcome Back !</h5>
+                  <h5 class="text-primary">Welcome Back Test!</h5>
                   <p>Sign in to continue to Skote.</p>
                 </div>
               </div>
@@ -81,7 +81,7 @@
                       </a>
                     </li>
                     <li class="list-inline-item">
-                      <a href="javascript::void()" class="social-list-item bg-danger text-white border-danger">
+                      <a (click)="onGoogleLogin()" class="social-list-item bg-danger text-white border-danger">
                         <i class="mdi mdi-google"></i>
                       </a>
                     </li>
